--- a/static/styles.css
+++ b/static/styles.css
@@ -25,3 +25,29 @@ nav .navbar-brand .green
 .shares{
     width:80px;
 }
+
+body{
+    padding-top: 72px;
+}
+
+#map{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.mn5{
+    margin-top: -72px;
+    padding-top: 72px;
+}
+
+.center-input{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media(min-width: 768px){
+    .search-input{
+        width:50%;
+    }
+}
