--- a/templates/details.html
+++ b/templates/details.html
@@ -6,32 +6,45 @@
 
 {% block main %}
     {% for meal in meals %}
-        <div style="border-bottom: 5px solid black;">
-            <p><h2>{{meal['strMeal']}}</h2></p>
-            <p>Category: {{meal['strCategory']}}</p>
-            <form action="/add_favorite" method="post">
-                <input name="id" type="hidden" value="{{meal['idMeal']}}">
-                <input name="meal_name" type="hidden" value="{{meal['strMeal']}}">
-                <input name="select" type="submit" value="Add to Favorites">
-            </form>
-            <br>
-            <div>
-                <img src="{{meal['strMealThumb']}}" width="50%" style='float: right;'>
-                <h4 class="text-start">Instructions</h4>
-
-                <ol>
-                    {% set list1 = meal['strInstructions'].split('.') %}
-                    {% set list1 = list1[:-1] %}
-                    {% for item in list1 %}
-                        <li class="text-start">{{ item }}</li>
-                    {% endfor %} 
-                </ol>
+    <section class="bg-light p-3 p-md-5">
+        <div class="container">
+            <div class="d-flex flex-column align-items-center justify-content-center">
+                <h2>{{meal['strMeal']}}</h2>
+                <p>Category: {{meal['strCategory']}}</p>
+                <form action="/add_favorite" method="post">
+                    <input name="id" type="hidden" value="{{meal['idMeal']}}">
+                    <input name="meal_name" type="hidden" value="{{meal['strMeal']}}">
+                    <input class="btn btn-outline-danger" name="select" type="submit" value="Add to Favorites">
+                </form>
             </div>
-            <table class="table">
+        </div>
+    </section>
+    <section class="p-3">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md order-md-2 mb-3 mb-md-0">
+                    <img src="{{meal['strMealThumb']}}" class="img-fluid rounded border border-dark">
+                </div>
+                <div class="col-md order-md-1">
+                    <h4 class="text-start">Instructions</h4>
+                    <ol class="list-group list-group-numbered">
+                        {% set list1 = meal['strInstructions'].split('.') %}
+                        {% set list1 = list1[:-1] %}
+                        {% for item in list1 %}
+                            <li class="list-group-item">{{ item }}</li>
+                        {% endfor %} 
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th class="text-start">Ingredient</th>
-                        <th class="text-start">Measure</th>
+                        <th>Ingredient</th>
+                        <th>Measure</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -46,5 +59,6 @@
                 </tbody>
             </table>
         </div>
+    </section>
     {% endfor %}
 {% endblock %}
