--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,12 +8,12 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
 
         <!-- http://getbootstrap.com/docs/5.1/ -->
-        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
-        <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
         <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-        <link href="/static/favicon.ico" rel="icon">
+        <link href="/static/burger.ico" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
 
@@ -22,25 +22,44 @@
     </head>
 
     <body>
-
-        <nav class="bg-light border navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="red">MealSearch</span></a>
-                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
+        <!-- Navbar -->
+        <nav class="bg-dark navbar navbar-expand-md navbar-dark fixed-top">
+            
+            <div class="container">
+            
+                <a class="navbar-brand" href="/">
+                    <div class="d-flex align-items-center">
+                        <img src="/static/burger.ico" alt="" height="43px">
+                        Meal<span class="red">Search</span>
+                    </div>
+                </a>
+                <button 
+                    class="navbar-toggler" 
+                    data-bs-target="#navbar" 
+                    data-bs-toggle="collapse" 
+                    type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/favorites">Favorites</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
                             <li class="nav-item"><a class="nav-link" href="/categories">Categories</a></li>
                             <li class="nav-item"><a class="nav-link" href="/random">Random</a></li>
                             <li class="nav-item"><a class="nav-link" href="/ingredients">Ingredients</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/favorites">Favorites</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                         </ul>
                     {% else %}
+                        <ul class="navbar-nav me-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/categories">Categories</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/random">Random</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/ingredients">Ingredients</a></li>
+                        </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                             <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
@@ -58,9 +77,9 @@
             </header>
         {% endif %}
 
-        <main class="container py-5 text-center">
+        <!-- <main class="container py-5 text-center"> -->
             {% block main %}{% endblock %}
-        </main>
+        <!-- </main> -->
 
         <footer class="mb-5 small text-center text-muted">
             Data provided by <a href="https://www.themealdb.com/">TheMealDB</a>
