--- a/templates/list.html
+++ b/templates/list.html
@@ -1,27 +1,21 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Search
+    
 {% endblock %}
 
 {% block main %}
 <div id="instructors" class="mn5"></div>
 <section class="p-5" id="instructors">
     <div class="container">
-        <form action="/search" method="get" class="input-group">
-            <input autocomplete="off" id="search" name="search" type="text" class="form-control" placeholder="Search">
-            <button class="btn btn-dark btn-lg" type="submit">Search</button>
-        </form>
-        <h2 class="text-center text-black mt-5">Search Results</h2>
-        <p class="lead text-center text-black mb-5">
-            Click on "See Details" to view a detailed page on meal including instructions and ingredient list.
-        </p>
+        {% block search %}{% endblock %}
+
         <div class="row g-3">
             {% for meal in meals %}
             <div class="col-md-6 col-lg-3">
                 <div class="card bg-light h-100">
                     <div class="card-body text-center">
-                        <img src="{{meal['strMealThumb']}}" class="rounded mb-2" alt="" width="100%">
+                        <a href="/details?id={{meal['idMeal']}}"><img src="{{meal['strMealThumb']}}" class="rounded mb-2" alt="" width="100%"></a>
 
                         <h3 class="card-title mb-2">{{meal['strMeal']}}</h3>
 
