--- a/templates/login.html
+++ b/templates/login.html
@@ -5,13 +5,19 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/login" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
-        </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
-        </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
-    </form>
+<div class="section">
+    <div class="container">
+        <form action="/login" method="post">
+            <div class="form-group my-3">
+              <label for="username">Username</label>
+              <input autocomplete="off" autofocus type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+            </div>
+            <div class="form-group mb-3">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Log In</button>
+          </form>
+    </div>
+</div>
 {% endblock %}
