--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block main %}
-<section class="p-5">
-    <div class="container">
+<section class="py-md-5">
+    <div class="container-md">
         <table class="table table-striped">
             <thead>
                 <tr>
