--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,7 @@
         <!-- Navbar -->
         <nav class="bg-dark navbar navbar-expand-md navbar-dark fixed-top">
             
-            <div class="container">
+            <div class="container-md">
             
                 <a class="navbar-brand" href="/">
                     <div class="d-flex align-items-center">
