--- a/templates/list.html
+++ b/templates/list.html
@@ -5,17 +5,18 @@
 {% endblock %}
 
 {% block main %}
-<div id="instructors" class="mn5"></div>
-<section class="p-5" id="instructors">
-    <div class="container">
+<div id="list" class="mn5"></div>
+<section class="p-5" id="list">
+    <div class="container-md">
         {% block search %}{% endblock %}
 
         <div class="row g-3">
+            {% if meals %}
             {% for meal in meals %}
             <div class="col-md-6 col-lg-3">
                 <div class="card bg-light h-100">
                     <div class="card-body text-center">
-                        <a href="/details?id={{meal['idMeal']}}"><img src="{{meal['strMealThumb']}}" class="rounded mb-2" alt="" width="100%"></a>
+                        <a href="/details?id={{meal['idMeal']}}"><img src="{{meal['strMealThumb']}}" class="rounded mb-2 border border-dark" alt="" width="100%"></a>
 
                         <h3 class="card-title mb-2">{{meal['strMeal']}}</h3>
 
@@ -32,7 +33,8 @@
                     </div>
                 </div>
             </div>
-            {% endfor %} 
+            {% endfor %}
+            {% endif %}
         </div>
     </div>
 </section>
