--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 <div class="section">
-    <div class="container">
+    <div class="container-md">
         <form action="/login" method="post">
             <div class="form-group my-3">
               <label for="username">Username</label>
