--- a/templates/search_list.html
+++ b/templates/search_list.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div id="instructors" class="mn5"></div>
 <section class="p-5" id="instructors">
-    <div class="container">
+    <div class="container-md">
         <form action="/search" method="get" class="input-group">
             <input autocomplete="off" id="search" name="search" type="text" class="form-control" placeholder="Search">
             <button class="btn btn-dark btn-lg" type="submit">Search</button>
