fixed mobile container size-again

--- a/templates/list.html
+++ b/templates/list.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 <div id="list" class="mn5"></div>
-<section class="p-5" id="list">
+<section class="py-3 p-md-5" id="list">
     <div class="container-md">
         {% block search %}{% endblock %}
 
