--- a/templates/details.html
+++ b/templates/details.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     {% for meal in meals %}
-    <section class="bg-light p-3 p-md-5">
+    <section class="bg-light py-3 p-md-5">
         <div class="container-md">
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h2>{{meal['strMeal']}}</h2>
@@ -19,7 +19,7 @@
             </div>
         </div>
     </section>
-    <section class="p-3">
+    <section class="py-3 p-md-5">
         <div class="container-md">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md order-md-2 mb-3 mb-md-0">
