--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+    <section class="bg-dark text-light py-3 p-md-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container-md">
             <!-- d-flex to start flex, d-sm-flex will only flex if bigger than sm-->
             <!-- align-items-center sets all items to vertical center of container -->
@@ -29,7 +29,7 @@
     </section>
 
     <!-- Newsletter -->
-    <section class="bg-primary text-light p-5">
+    <section class="bg-primary text-light py-3 p-md-5">
         <div class="container-md">
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class="mb-3 mb-md-0">Use The Right Tool For The Job!</h3>
@@ -46,13 +46,13 @@
 
     <!-- Sections -->
     <div id="search" class="mn5"></div>
-    <section id="search" class="p-5">
+    <section id="search" class="py-3 p-md-5">
         <div class="container-md">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
                     <img src="static/search.svg" class="img-fluid" alt="">
                 </div>
-                <div class="col-md p-5">
+                <div class="col-md py-3 p-md-5">
                     <h2><span class="text-danger">Search</span> For The Perfect Meal</h2>
                     <p class="lead">
                         Know what you want?
@@ -69,13 +69,13 @@
         </div>
     </section>
     <div id="categories" class="mn5"></div>
-    <section id="categories" class="p-5 bg-dark text-light">
+    <section id="categories" class="py-3 p-md-5 bg-dark text-light">
         <div class="container-md">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md order-md-2">
                     <img src="static/categories.svg" class="img-fluid" alt="">
                 </div>
-                <div class="col-md p-5 order-md-1">
+                <div class="col-md py-3 p-md-5 order-md-1">
                     <h2><span class="text-danger">Categorize</span> Your Cravings</h2>
                     <p class="lead">
                         Betting on breakfast? Dying for dessert? Promised some pasta? 
@@ -91,13 +91,13 @@
         </div>
     </section>
     <div id="random" class="mn5"></div>
-    <section id="random" class="p-5">
+    <section id="random" class="py-3 p-md-5">
         <div class="container-md">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
                     <img src="static/random.svg" class="img-fluid" alt="">
                 </div>
-                <div class="col-md p-5">
+                <div class="col-md py-3 p-md-5">
                     <h2><span class="text-danger">Random</span> Recommendation</h2>
                     <p class="lead">
                         Can't decide on what you want?  
@@ -113,13 +113,13 @@
         </div>
     </section>
     <div id="ingredients" class="mn5"></div>
-    <section id="ingredients" class="p-5 bg-dark text-light">
+    <section id="ingredients" class="py-3 p-md-5 bg-dark text-light">
         <div class="container-md">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md order-md-2">
                     <img src="static/ingredients.svg" class="img-fluid" alt="">
                 </div>
-                <div class="col-md p-5">
+                <div class="col-md py-3 p-md-5">
                     <h2>Include Your <span class="text-danger">Ingredients</span></h2>
                     <p class="lead">
                         Is your pantry getting full? 
