updated index image, resized details button, added ingredient filter

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,8 @@
                         Know what you want?
                     </p>
                     <p>
-                        Use this text search to find your next kitchen experiment!
+                        Use this text search to find your next kitchen experiment!<br>
+                        Try something simple like cake or salad!
                     </p>
                     <form action="/search" method="get" class="input-group">
                         <input autocomplete="off" id="search" name="search" type="text" class="form-control" placeholder="Search">
